alicloud/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-kitc
  labels:
    app: application
    project: kitc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: application
      project: kitc
  template:
    metadata:
      labels:
        app: application
        project: kitc
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: application
          image: aneatu/kitc
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: test.host.name
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: test.host.name
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3



---
kind: Service
apiVersion: v1
metadata:
  name: application-kitc
  labels:
    project: kitc
spec:
  selector:
    app: application
    project: kitc
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
