alicloud/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kitc
  labels:
    project: kitc
  annotations:
#    kubernetes.io/ingress.class: "gce"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: test.host.name
      http:
        paths:
#          - path: /static
#            backend:
#              serviceName: static-kitc
#              servicePort: 80
          - path: /
            backend:
              serviceName: application-kitc
              servicePort: 80
